--- a/headstompers/Packages/manifest.json
+++ b/headstompers/Packages/manifest.json
@@ -7,8 +7,10 @@
     "com.unity.inputsystem": "1.11.1",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.multiplayer.playmode": "1.3.3",
+    "com.unity.multiplayer.widgets": "1.0.1",
     "com.unity.netcode.gameobjects": "2.4.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.multiplayer": "1.0.2",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
